--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=fcd237526cdc5403673548b9ce419356",
+    "/css/app.css": "/css/app.css?id=6cb318aa9aa1f2acebbfe25adeacefdd"
 }
